Fix notification bell icon alignment with flexbox

--- a/inc/assets/css/global.css
+++ b/inc/assets/css/global.css
@@ -24,7 +24,9 @@
 
 .notification-bell-icon {
     position: relative;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .notification-bell-avatar-wrapper {
